Fix header padding on small screens

--- a/site/_includes/styles/components/_header.scss
+++ b/site/_includes/styles/components/_header.scss
@@ -5,12 +5,13 @@
    flex-wrap: wrap;
    align-items: center;
    align-content: center;
-   padding: 1rem 2rem;
+   padding: 1rem;
 }
 
 .site-title {
    flex: 1 1 auto;
    align-self: center;
+   margin-bottom: .42505rem; // ms(-6) in rem
 
    font: {
       family: var(--sans-display);
